--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.0.1",
     "http-errors": "~2.0.0",
     "morgan": "~1.10.0",
+    "next": "^14.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pug": "3.0.2"
